src/Konta.Web/src/styles/main.css
:root {
    font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
    line-height: 1.5;
    font-weight: 400;

    color-scheme: light dark;
    color: #213547;
    background-color: #f6f9fc;

    font-synthesis: none;
    text-rendering: optimizeLegibility;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
}

body {
    margin: 0;
    display: flex;
    min-width: 320px;
    min-height: 100vh;
    background-color: #f6f9fc;
}

#app {
    width: 100%;
}

* {
    box-sizing: border-box;
}

h1,
h2,
h3 {
    color: #1a1a1a;
}

@media (prefers-color-scheme: light) {
    :root {
        color: #213547;
        background-color: #ffffff;
    }
}

